Added source info

--- a/dotOnion/popup.html
+++ b/dotOnion/popup.html
@@ -37,7 +37,8 @@
                 It is a lot more secure as it does other stuff to protect your privacy, dotOnion is only intended for letting you access tor sites, it doesn't add any security layers.</span><br/>
                 <br/>
                 <br/>
-                <span data-i18n="about_crafted">dotOnion is hand crafted by Hyenas, with love! :3</span>
+                <span data-i18n="about_crafted">dotOnion is hand crafted by Hyenas, with love! :3</span><br/>
+                <a href="https://github.com/FelixWolf/dotOnion"><span data-i18n="source_code">Get the source code here!</span></a>
             </div>
         </div>
     </body>
